--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   cloud_firestore: ^3.1.6
+  image_picker: ^0.8.4+4
+  file_picker:
+  firebase_storage: ^10.2.5
 
 dev_dependencies:
   flutter_test:
